--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,15 @@
 COMPILER = gcc
-FILESYSTEM_FILES = file_system aes256_encrypt
+FILESYSTEM_FILES = file_system aes256_encrypt.o
 
 all:$(FILESYSTEM_FILES)
 
 
+aes256_encrypt.o:aes256_encrypt.c
+	$(COMPILER) -c $< -o $@
 
 
-aes256_encrypt:aes256_encrypt.c
-	$(COMPILER) -o $@ -c $<
-
-
-file_system:file_system.c aes256_encrypt
-	$(COMPILER) -o file_system.c aes256_encrypt.o `pkg-config fuse --cflags --libs` -lcrypto
+file_system:file_system.c aes256_encrypt.o
+	$(COMPILER) -o file_system file_system.c aes256_encrypt.o `pkg-config fuse --cflags --libs` -lcrypto
 	echo 'To Mount: ./file_system -f [mount point]'
 	
 
