Fix the file size bug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "uthash.h": "c",
         "types.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "bio.h": "c"
     }
 }
