--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "uthash.h": "c",
         "types.h": "c",
         "time.h": "c",
-        "bio.h": "c"
+        "bio.h": "c",
+        "string.h": "c"
     }
 }
